--- a/TagNameMapper/TagNameMapper.csproj
+++ b/TagNameMapper/TagNameMapper.csproj
@@ -24,7 +24,7 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference> 
-    <PackageReference Include="HotAvalonia" Version="3.0.0" />
+    <PackageReference Include="HotAvalonia" Version="3.0.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.8" />
@@ -41,7 +41,6 @@
     <AvaloniaResource Include="Images\文件夹图标.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Behaviors\" />
     <Folder Include="Data\" />
     <Folder Include="Models\EFCore\DbContexts\" />
   </ItemGroup>
